change ui card info

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,4 +1,91 @@
 {
-  "home": "Home",
-  "history": "History"
+  "bmi": "BMI",
+  "history": "History",
+  "article": "Article",
+  "weight": "Weight",
+  "height": "Height",
+  "male": "Male",
+  "female": "Female",
+  "age": "Age",
+  "calculation": "Calculation",
+  "height_error": "Height is validate",
+  "weight_error": "Weight is validate",
+  "height_and_weight_error": "Height and Weight is validate",
+  "oops": "Oops",
+  "result": "Result",
+  "your_bmi": "You BMI is:",
+  "extremely_light_weight": "Extremely light weight",
+  "very_light_weight": "Very light weight",
+  "light_weight": "Light weight",
+  "normal": "Normal",
+  "overweight": "Overweight",
+  "obesity_I": "Obesity I",
+  "obesity_II": "Obesity II",
+  "obesity_III": "Obesity III",
+  "ideal_range": "Ideal BMI ranger",
+  "save": "Save",
+  "time_read": "3-minute read",
+  "no_history": "No history yet",
+  "setting": "Setting",
+  "language": "Language",
+  "other": "Other",
+  "share_app": "Share app",
+  "rate_us": "Rate us",
+  "delete_data": "Delete data",
+  "success": "Success",
+  "save_success": "Save data success",
+  "date_time": "Date time",
+  "are_sure": "Are you sure?",
+  "cancel": "Cancel",
+  "confirm": "Confirm",
+  "done": "Done",
+  "okay": "Okay",
+  "article1_title1": "BMI Ranges and their meaning",
+  "article1_content1": "BMI, or Body Mass Index, is a widely used measurement that helps determine if a person is at a healthy weight for their height. BMI is calculated by dividing a person's weight (in kilograms) by their height (in meters) squared. The resulting number is then compared to a range of values to determine if a person is underweight, normal weight, overweight, or obese.\n\nThe World Health Organization (WHO) and other health organizations around the world use BMI ranges as a guide to evaluate the risk of health problems associated with excess body weight. These BMI ranges are as follows:\n\nUnderweight: BMI below 18.5 Normal weight: BMI between 18.5 - 24.9\n\nOverweight: BMI between 25-29.9\n\nObese: BMI 30 - 34.9\n\nSeverely Obese: BMI 35 or higher.",
+  "article1_title2": "Underweight",
+  "article1_content2": "If your BMI falls below 18.5, you are considered underweight. Being underweight may indicate that you are not getting enough nutrients or calories to maintain a healthy weight. It can also be a sign of an underlying health condition such as an eating disorder or a thyroid problem. Being underweight can increase the risk of osteoporosis, weakened immune system, and infertility.",
+  "article1_title3": "Normal weight",
+  "article1_content3": "A BMI between 18.5 and 24.9 is considered to be in the normal weight range. This is generally considered to be a healthy weight range, as it is associated with a lower risk of chronic diseases such as heart disease, type 2 diabetes, and certain types of cancer.\n",
+  "article1_title4": "Overweight",
+  "article1_content4": "If your BMI falls between 25 and 29.9, you are considered to be overweight. Being overweight is associated with an increased risk of health problems such as heart disease, stroke, type 2 diabetes, and certain types of cancer. Losing weight through a healthy diet and regular exercise can help reduce the risk of these health problems.",
+  "article1_title5": "Obese",
+  "article1_content5": "If your BMI is 30 or higher, you are considered to be obese. Obesity is associated with an increased risk of serious health problems such as heart disease, stroke, type 2 diabetes, and certain types of cancer. Obesity can also lead to other health problems such as sleep apnea, joint problems, and infertility. Losing weight through a healthy diet and regular exercise can help reduce the risk of these health problems.",
+  "article1_title6": "Conclusion",
+  "article1_content6": "It's important to remember that BMI is just one tool used to evaluate health risk associated with weight. Other factors such as waist circumference, blood pressure, and cholesterol levels should also be taken into consideration. Additionally, BMI may not be accurate for athletes or people with a lot of muscle mass, as muscle weighs more than fat.\n\nIn conclusion, BMI ranges provide a useful guide to evaluate if a person is at a healthy weight for their height. Being underweight, normal weight, overweight, or obese can have a significant impact on your overall health and the risk of chronic diseases.If you are concerned about your weight, talk to your healthcare provider about the best strategies for maintaining a healthy weight and reducing your risk of health problems.",
+  "article2_title1": "Why should you calculate BMI regularly?",
+  "article2_content1": "Body Mass Index (BMI) is a measure of body fat based on a person's height and weight. It is a widely used tool for assessing whether someone is at a healthy weight, and it can be a valuable indicator of a person's overall health status. Here are several reasons why you should calculate your BMI:",
+  "article2_title2": "1. Evaluate your weight status",
+  "article2_content2": "Calculating your BMI can help you determine if you are at a healthy weight for your height. The BMI ranges can provide guidance on whether you are underweight, normal weight, overweight, or obese. If you are not at a healthy weight, it can increase your risk of developing chronic health conditions such as heart disease, diabetes, and certain cancers.",
+  "article2_title3": "2. Assess health risks",
+  "article2_content3": "Being overweight or obese can increase the risk of several health problems. Calculating your BMI can help you assess your risk for developing these conditions. For example, people with a BMI of 30 or higher are at an increased risk of developing type 2 diabetes, heart disease, and certain types of cancer.\n",
+  "article2_title4": "3. Track weight loss progress",
+  "article2_content4": "If you are trying to lose weight, calculating your BMI can help you track your progress. As you lose weight, your BMI will decrease, indicating that you are moving towards a healthy weight. This can be a great motivator to continue making healthy lifestyle choices.",
+  "article2_title5": "4. Identify potential health problems",
+  "article2_content5": "Calculating your BMI can help identify potential health problems associated with being underweight or overweight. Being underweight can increase the risk of nutrient deficiencies, weakened immune system, and osteoporosis. Being overweight or obese can increase the risk of sleep apnea, joint problems, and infertility. By identifying potential health problems, you can take steps to address them and improve your overall health.",
+  "article2_title6": "5. Guide treatment decisions",
+  "article2_content6": "BMI can be a helpful tool for healthcare providers when making treatment decisions for patients. For example, if a patient has a high BMI, their healthcare provider may recommend weight loss as a strategy to reduce their risk of developing chronic health conditions.",
+  "article2_title7": "Conclusion",
+  "article2_content7": "In conclusion, calculating your BMI is a simple and useful tool for assessing your weight status, identifying potential health problems, tracking weight loss progress, and guiding treatment decisions. However, it's important to remember that BMI is just one tool for evaluating health risk associated with weight. Other factors such as waist circumference, blood pressure, and cholesterol levels should also be taken into consideration.",
+  "article3_title1": "Diet for maintaining perfect BMI",
+  "article3_content1": "Maintaining a healthy body weight is essential for overall health and well-bein One way to achieve and maintain a heal weight is by following a healthy diet. He are some dietary tips for maintaining a perfect BMI:",
+  "article3_title2": "1. Eat a balanced diet",
+  "article3_content2": "A balanced diet includes a variety of nutrient-dense foods from all food groups, including fruits, vegetables, whole grains, lean protein, and healthy fats. These foods provide your body with the nutrients it needs for optimal health and can help you maintain a healthy weight.",
+  "article3_title3": "2. Watch portion sizes",
+  "article3_content3": "Portion sizes can greatly impact your calorie intake. Eating too much of any food,even healthy foods, can lead to weight gain. It's important to pay attention to portion sizes and use smaller plates to help control how much you eat.",
+  "article3_title4": "3. Limit processed foods",
+  "article3_content4": "Processed foods are often high in calories, unhealthy fats, and added sugars, which can contribute to weight gain. Limiting your intake of processed foods and choosing whole,minimally processed foods can help you maintain a healthy weight.",
+  "article3_title5": "4. Stay hydrated",
+  "article3_content5": "Drinking plenty of water can help you maintain a healthy weight. Water can help you feel full, which can prevent overeating. Additionally, drinking water instead of sugary beverages can help reduce your calorie intake. Our health experts commonly recommend drinking atleast eight 8-ounce glasses, which equals about 2 liters, or half a gallon a day.This is called the 8x8 rule and is very easy to remember.\n",
+  "article3_title6": "5. Don't skip meals",
+  "article3_content6": "Skipping meals can lead to overeating later in the day, which can contribute to weight gain. Eating regular meals throughout the day can help you maintain a healthy weight.",
+  "article3_title7": "6. Include physical activity",
+  "article3_content7": "Physical activity is important for maintaining a healthy weight. Aim for at least 150 minutes of moderate-intensity activity per week. This can include activities such as walking, biking, or swimming.",
+  "article3_title8": "Conclusion",
+  "article3_content8": "In conclusion, maintaining a healthy weight is essential for overall health and well- being. Following a healthy diet that includes a variety of nutrient-dense foods, watching portion sizes, limiting processed foods and alcohol consumption, staying hydrated, and including physical activity can help you maintain a perfect BMI. If you have concerns about your weight or dietary habits, talk to your healthcare provider. They can provide personalized advice and support to help you achieve and maintain a healthy weight.",
+  "article4_title1": "Obesity",
+  "article4_content1": "Obesity is a chronic disease that occurs when a person's body mass index (BMI) exceeds a certain level. BMI is a measure of body fat based on a person's height and weight. A BMI of 30 or higher is considered obese. Obesity is a serious health issue that can increase the risk of several chronic diseases and can significantly impact a person's quality of life.",
+  "article4_title2": "Causes of Obesity",
+  "article4_content2": "Obesity is a complex disease that can be\n\ncaused by several factors, including: 1) Genetics: Some people may be predisposed to obesity due to their genes.\n\n2) Environment: The environment can impact a person's food choices and physical activity levels, which can contribute to obesity.\n\n3) Behavior: Unhealthy eating habits, lack of physical activity, and poor sleep habits can all contribute to obesity.\n\n4) Medical conditions: Certain medical conditions, such as hypothyroidism and polycystic ovary syndrome, can increase the risk of obesity. Effects of Obesity",
+  "article4_title3": "Prevention of Obesity",
+  "article4_content3": "Preventing obesity is key to reducing the risk of chronic diseases and improving overall health. Strategies for preventing obesity include:\n\n1) Making healthy food choices: Choosing a balanced diet that includes fruits, vegetables, whole grains, lean protein, and healthy fats can help prevent obesity.\n\n2) Increasing physical activity: Aim for at least 150 minutes of moderate-intensity physical activity per week to help prevent obesity.\n\n3) Limiting screen time: Spending too much time watching TV or on the computer can contribute to obesity. Limiting screen time can help prevent obesity."
 }
