--- a/assets/translations/vi.json
+++ b/assets/translations/vi.json
@@ -1,4 +1,91 @@
 {
-  "home": "Trang chu",
-  "history": "Lich su"
+  "bmi": "BMI",
+  "history": "Lịch sử",
+  "article": "Bài viết",
+  "weight": "Cân nặng",
+  "height": "Chiều cao",
+  "male": "Nam",
+  "female": "Nữ",
+  "age": "Tuổi",
+  "calculation": "Tính toán",
+  "height_error": "Chiều cao không hợp lệ",
+  "weight_error": "Cân nặng không hợp lệ",
+  "height_and_weight_error": "Cân nặng và chiều cao không hợp lệ",
+  "oops": "Lỗi",
+  "result": "Kết quả",
+  "your_bmi": "Chỉ số BMI của bạn là:",
+  "extremely_light_weight": "Cực kỳ nhẹ cân",
+  "very_light_weight": "Rất nhẹ cân",
+  "light_weight": "Nhẹ cân",
+  "normal": "Bình thường",
+  "overweight": "Thừa cân",
+  "obesity_I": "Béo phì loại 1",
+  "obesity_II": "Béo phì loại 2",
+  "obesity_III": "Béo phì loại 3",
+  "ideal_range": "Chỉ số BMI lý tưởng khoảng",
+  "save": "Lưu",
+  "time_read": "3 phút đọc",
+  "no_history": "Không có lịch sử",
+  "setting": "Cài đặt",
+  "language": "Ngôn ngữ",
+  "other": "Khác",
+  "share_app": "Chia sẻ",
+  "rate_us": "Đánh giá",
+  "delete_data": "Xóa dữ liệu",
+  "success": "Thành công",
+  "save_success": "Lưu dữ liệu thành công",
+  "date_time": "Thời gian",
+  "are_sure": "Bạn có chắc chắn?",
+  "cancel": "Hủy",
+  "confirm": "Đồng ý",
+  "done": "Xong",
+  "okay": "Xong",
+  "article1_title1": "Phạm vi và ý nghĩa của BMI",
+  "article1_content1": "BMI, hay Chỉ số khối cơ thể, là một phép đo được sử dụng rộng rãi để xác định xem một người có cân nặng khỏe mạnh so với chiều cao của họ hay không. BMI được tính bằng cách chia cân nặng của một người (tính bằng kg) cho bình phương chiều cao (tính bằng mét). Sau đó, con số kết quả được so sánh với một loạt các giá trị để xác định xem một người đang thiếu cân, cân nặng bình thường, thừa cân hay béo phì.\n\nTổ chức Y tế Thế giới (WHO) và các tổ chức y tế khác trên thế giới sử dụng phạm vi BMI làm hướng dẫn để đánh giá nguy cơ mắc các vấn đề sức khỏe liên quan đến trọng lượng cơ thể dư thừa. Các phạm vi BMI này như sau:\n\nThiếu cân: BMI dưới 18,5 Cân nặng bình thường: BMI từ 18,5 - 24,9\n\nThừa cân: BMI từ 25-29,9\n\nBéo phì: BMI 30 - 34,9\n\nBéo phì nặng: BMI 35 trở lên.",
+  "article1_title2": "Thiếu cân",
+  "article1_content2": "Nếu chỉ số BMI của bạn giảm xuống dưới 18,5, bạn được coi là thiếu cân. Thiếu cân có thể cho thấy bạn không nhận đủ chất dinh dưỡng hoặc calo để duy trì cân nặng khỏe mạnh. Nó cũng có thể là dấu hiệu của tình trạng sức khỏe tiềm ẩn như rối loạn ăn uống hoặc vấn đề về tuyến giáp. Thiếu cân có thể làm tăng nguy cơ loãng xương, hệ thống miễn dịch suy yếu và vô sinh.",
+  "article1_title3": "Cân nặng bình thường",
+  "article1_content3": "Chỉ số BMI từ 18,5 đến 24,9 được coi là nằm trong phạm vi cân nặng bình thường. Đây thường được coi là phạm vi cân nặng khỏe mạnh vì nó có liên quan đến việc giảm nguy cơ mắc các bệnh mãn tính như bệnh tim, tiểu đường loại 2 và một số loại ung thư.",
+  "article1_title4": "Thừa cân",
+  "article1_content4": "Nếu chỉ số BMI của bạn nằm trong khoảng từ 25 đến 29,9 thì bạn được coi là thừa cân. Thừa cân có liên quan đến việc tăng nguy cơ mắc các vấn đề sức khỏe như bệnh tim, đột quỵ, tiểu đường loại 2 và một số loại ung thư. Giảm cân thông qua chế độ ăn uống lành mạnh và tập thể dục thường xuyên có thể giúp giảm nguy cơ mắc các vấn đề sức khỏe này.",
+  "article1_title5": "Béo phì",
+  "article1_content5": "Nếu chỉ số BMI của bạn từ 30 trở lên, bạn được coi là béo phì. Béo phì có liên quan đến việc tăng nguy cơ mắc các vấn đề sức khỏe nghiêm trọng như bệnh tim, đột quỵ, tiểu đường loại 2 và một số loại ung thư. Béo phì cũng có thể dẫn đến các vấn đề sức khỏe khác như ngưng thở khi ngủ, các vấn đề về khớp và vô sinh. Giảm cân thông qua chế độ ăn uống lành mạnh và tập thể dục thường xuyên có thể giúp giảm nguy cơ mắc các vấn đề sức khỏe này.",
+  "article1_title6": "Phần kết luận",
+  "article1_content6": "Điều quan trọng cần nhớ là BMI chỉ là một công cụ được sử dụng để đánh giá nguy cơ sức khỏe liên quan đến cân nặng. Các yếu tố khác như chu vi vòng eo, huyết áp và mức cholesterol cũng cần được xem xét. Ngoài ra, BMI có thể không chính xác đối với vận động viên hoặc những người có nhiều cơ bắp vì cơ nặng hơn mỡ.\n\nTóm lại, phạm vi BMI cung cấp một hướng dẫn hữu ích để đánh giá xem một người có cân nặng khỏe mạnh so với chiều cao của họ hay không. Thiếu cân, cân nặng bình thường, thừa cân hoặc béo phì có thể tác động đáng kể đến sức khỏe tổng thể của bạn và nguy cơ mắc các bệnh mãn tính. Nếu bạn lo lắng về cân nặng của mình, hãy trao đổi với nhà cung cấp dịch vụ chăm sóc sức khỏe của bạn về các chiến lược tốt nhất để duy trì cân nặng khỏe mạnh và giảm cân. nguy cơ của bạn về các vấn đề sức khỏe.",
+  "article2_title1": "Tại sao bạn nên tính chỉ số BMI thường xuyên?",
+  "article2_content1": "Chỉ số khối cơ thể (BMI) là thước đo lượng mỡ trong cơ thể dựa trên chiều cao và cân nặng của một người. Đây là một công cụ được sử dụng rộng rãi để đánh giá xem một người có cân nặng khỏe mạnh hay không và có thể là một chỉ báo có giá trị về tình trạng sức khỏe tổng thể của một người. Dưới đây là một số lý do tại sao bạn nên tính chỉ số BMI của mình:",
+  "article2_title2": "1. Đánh giá tình trạng cân nặng của bạn",
+  "article2_content2": "Tính chỉ số BMI có thể giúp bạn xác định xem bạn có cân nặng phù hợp với chiều cao của mình hay không. Phạm vi BMI có thể cung cấp hướng dẫn về việc bạn thiếu cân, cân nặng bình thường, thừa cân hay béo phì. Nếu bạn không có cân nặng khỏe mạnh, điều đó có thể làm tăng nguy cơ phát triển các tình trạng sức khỏe mãn tính như bệnh tim, tiểu đường và một số bệnh ung thư.",
+  "article2_title3": "2. Đánh giá rủi ro sức khỏe",
+  "article2_content3": "Thừa cân hoặc béo phì có thể làm tăng nguy cơ mắc một số vấn đề sức khỏe. Tính toán chỉ số BMI của bạn có thể giúp bạn đánh giá nguy cơ phát triển các tình trạng này. Ví dụ, những người có chỉ số BMI từ 30 trở lên có nguy cơ mắc bệnh tiểu đường loại 2, bệnh tim và một số loại ung thư.",
+  "article2_title4": "3. Theo dõi tiến độ giảm cân",
+  "article2_content4": "Nếu bạn đang cố gắng giảm cân, việc tính chỉ số BMI có thể giúp bạn theo dõi tiến trình của mình. Khi bạn giảm cân, chỉ số BMI của bạn sẽ giảm, cho thấy bạn đang hướng tới cân nặng khỏe mạnh. Đây có thể là động lực tuyệt vời để tiếp tục lựa chọn lối sống lành mạnh.",
+  "article2_title5": "4. Xác định các vấn đề sức khỏe tiềm ẩn",
+  "article2_content5": "Tính chỉ số BMI của bạn có thể giúp xác định các vấn đề sức khỏe tiềm ẩn liên quan đến tình trạng thiếu cân hoặc thừa cân. Thiếu cân có thể làm tăng nguy cơ thiếu hụt chất dinh dưỡng, hệ thống miễn dịch suy yếu và loãng xương. Thừa cân hoặc béo phì có thể làm tăng nguy cơ ngưng thở khi ngủ, các vấn đề về khớp và vô sinh. Bằng cách xác định các vấn đề sức khỏe tiềm ẩn, bạn có thể thực hiện các bước để giải quyết chúng và cải thiện sức khỏe tổng thể của mình.",
+  "article2_title6": "5. Hướng dẫn quyết định điều trị",
+  "article2_content6": "BMI có thể là một công cụ hữu ích cho các nhà cung cấp dịch vụ chăm sóc sức khỏe khi đưa ra quyết định điều trị cho bệnh nhân. Ví dụ: nếu một bệnh nhân có chỉ số BMI cao, nhà cung cấp dịch vụ chăm sóc sức khỏe của họ có thể đề nghị giảm cân như một chiến lược để giảm nguy cơ phát triển các tình trạng sức khỏe mãn tính.",
+  "article2_title7": "Phần kết luận",
+  "article2_content7": "Tóm lại, tính chỉ số BMI là một công cụ đơn giản và hữu ích để đánh giá tình trạng cân nặng của bạn, xác định các vấn đề sức khỏe tiềm ẩn, theo dõi tiến trình giảm cân và hướng dẫn các quyết định điều trị. Tuy nhiên, điều quan trọng cần nhớ là BMI chỉ là một công cụ để đánh giá nguy cơ sức khỏe liên quan đến cân nặng. Các yếu tố khác như chu vi vòng eo, huyết áp và mức cholesterol cũng cần được xem xét.",
+  "article3_title1": "Chế độ ăn uống để duy trì chỉ số BMI hoàn hảo",
+  "article3_content1": "Duy trì trọng lượng cơ thể khỏe mạnh là điều cần thiết cho sức khỏe tổng thể và sức khỏe. Một cách để đạt được và duy trì cân nặng lành mạnh là tuân theo một chế độ ăn uống lành mạnh. Ông đưa ra một số lời khuyên về chế độ ăn uống để duy trì chỉ số BMI hoàn hảo:",
+  "article3_title2": "1. Ăn một chế độ ăn uống cân bằng",
+  "article3_content2": "Một chế độ ăn uống cân bằng bao gồm nhiều loại thực phẩm giàu chất dinh dưỡng từ tất cả các nhóm thực phẩm, bao gồm trái cây, rau, ngũ cốc nguyên hạt, protein nạc và chất béo lành mạnh. Những thực phẩm này cung cấp cho cơ thể bạn những chất dinh dưỡng cần thiết để có sức khỏe tối ưu và có thể giúp bạn duy trì cân nặng khỏe mạnh.",
+  "article3_title3": "2. Kích thước phần ăn theo thời gian",
+  "article3_content3": "Kích thước khẩu phần có thể ảnh hưởng lớn đến lượng calo của bạn. Ăn quá nhiều bất kỳ loại thực phẩm nào, ngay cả những thực phẩm lành mạnh, đều có thể dẫn đến tăng cân. Điều quan trọng là phải chú ý đến khẩu phần ăn và sử dụng đĩa nhỏ hơn để giúp kiểm soát lượng thức ăn bạn ăn.",
+  "article3_title4": "3. Hạn chế thực phẩm chế biến sẵn",
+  "article3_content4": "Thực phẩm chế biến sẵn thường chứa nhiều calo, chất béo không lành mạnh và đường bổ sung, có thể góp phần tăng cân. Hạn chế ăn thực phẩm chế biến sẵn và chọn thực phẩm nguyên chất, chế biến tối thiểu có thể giúp bạn duy trì cân nặng khỏe mạnh.",
+  "article3_title5": "4. Giữ nước",
+  "article3_content5": "Uống nhiều nước có thể giúp bạn duy trì cân nặng khỏe mạnh. Nước có thể giúp bạn cảm thấy no, từ đó ngăn ngừa việc ăn quá nhiều. Ngoài ra, uống nước thay vì đồ uống có đường có thể giúp giảm lượng calo nạp vào cơ thể. Các chuyên gia sức khỏe của chúng tôi thường khuyên bạn nên uống ít nhất tám ly 8 ounce, tương đương khoảng 2 lít hoặc nửa gallon mỗi ngày. Đây được gọi là quy tắc 8x8 và rất dễ nhớ.",
+  "article3_title6": "5. Đừng bỏ bữa",
+  "article3_content6": "Bỏ bữa có thể dẫn đến ăn quá nhiều vào cuối ngày, góp phần làm tăng cân. Ăn các bữa ăn đều đặn trong ngày có thể giúp bạn duy trì cân nặng khỏe mạnh.",
+  "article3_title7": "6. Bao gồm hoạt động thể chất",
+  "article3_content7": "Hoạt động thể chất rất quan trọng để duy trì cân nặng khỏe mạnh. Đặt mục tiêu hoạt động với cường độ vừa phải ít nhất 150 phút mỗi tuần. Điều này có thể bao gồm các hoạt động như đi bộ, đi xe đạp hoặc bơi lội.",
+  "article3_title8": "Phần kết luận",
+  "article3_content8": "Tóm lại, duy trì cân nặng hợp lý là điều cần thiết cho sức khỏe tổng thể và tinh thần. Thực hiện chế độ ăn uống lành mạnh bao gồm nhiều loại thực phẩm giàu chất dinh dưỡng, theo dõi khẩu phần ăn, hạn chế tiêu thụ thực phẩm chế biến sẵn và rượu, giữ đủ nước và bao gồm cả hoạt động thể chất có thể giúp bạn duy trì chỉ số BMI hoàn hảo. Nếu bạn lo lắng về cân nặng hoặc thói quen ăn kiêng của mình, hãy nói chuyện với nhà cung cấp dịch vụ chăm sóc sức khỏe của bạn. Họ có thể cung cấp lời khuyên và hỗ trợ cá nhân để giúp bạn đạt được và duy trì cân nặng khỏe mạnh.",
+  "article4_title1": "Béo phì",
+  "article4_content1": "Béo phì là một căn bệnh mãn tính xảy ra khi chỉ số khối cơ thể (BMI) của một người vượt quá một mức nhất định. BMI là thước đo lượng mỡ trong cơ thể dựa trên chiều cao và cân nặng của một người. Chỉ số BMI từ 30 trở lên được coi là béo phì. Béo phì là một vấn đề sức khỏe nghiêm trọng có thể làm tăng nguy cơ mắc một số bệnh mãn tính và có thể ảnh hưởng đáng kể đến chất lượng cuộc sống của một người.",
+  "article4_title2": "Nguyên nhân gây béo phì",
+  "article4_content2": "Béo phì là một căn bệnh phức tạp có thể\n\ndo một số yếu tố gây ra, bao gồm: 1) Di truyền: Một số người có thể dễ bị béo phì do gen của họ.\n\n2) Môi trường: Môi trường có thể tác động đến việc lựa chọn thực phẩm và mức độ hoạt động thể chất của một người, có thể góp phần gây ra béo phì.\n\n3) Hành vi: Thói quen ăn uống không lành mạnh, thiếu hoạt động thể chất và thói quen ngủ kém đều có thể góp phần gây ra béo phì.\n\n4) Tình trạng bệnh lý: Một số tình trạng bệnh lý nhất định, chẳng hạn như suy giáp và hội chứng buồng trứng đa nang, có thể làm tăng nguy cơ béo phì.",
+  "article4_title3": "Phòng chống béo phì",
+  "article4_content3": "Ngăn ngừa béo phì là chìa khóa để giảm nguy cơ mắc các bệnh mãn tính và cải thiện sức khỏe tổng thể. Các chiến lược ngăn ngừa béo phì bao gồm:\n\n1) Lựa chọn thực phẩm lành mạnh: Chọn một chế độ ăn uống cân bằng bao gồm trái cây, rau, ngũ cốc nguyên hạt, protein nạc và chất béo lành mạnh có thể giúp ngăn ngừa béo phì.\n\n2) Tăng cường hoạt động thể chất: Đặt mục tiêu hoạt động thể chất với cường độ vừa phải ít nhất 150 phút mỗi tuần để giúp ngăn ngừa béo phì.\n\n3) Hạn chế thời gian sử dụng thiết bị: Dành quá nhiều thời gian xem TV hoặc sử dụng máy tính có thể góp phần gây béo phì. Hạn chế thời gian sử dụng thiết bị có thể giúp ngăn ngừa béo phì."
 }
