change ui card info

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -40,6 +40,14 @@
   "confirm": "Confirm",
   "done": "Done",
   "okay": "Okay",
+  "close": "Close",
+  "select_language": "Select Language",
+  "rate": "Rate This App",
+  "rate_content": "Do you like this app? Please leave a rating",
+  "button_rate": "RATE",
+  "no_thank": "NO THANKS",
+  "maybe_later": "MAYBE LATER",
+  "rate_content_2": "If you like this app, please take a little bit of your time to review it !\nIt really helps us and it shouldn't take you more than one minute.",
   "article1_title1": "BMI Ranges and their meaning",
   "article1_content1": "BMI, or Body Mass Index, is a widely used measurement that helps determine if a person is at a healthy weight for their height. BMI is calculated by dividing a person's weight (in kilograms) by their height (in meters) squared. The resulting number is then compared to a range of values to determine if a person is underweight, normal weight, overweight, or obese.\n\nThe World Health Organization (WHO) and other health organizations around the world use BMI ranges as a guide to evaluate the risk of health problems associated with excess body weight. These BMI ranges are as follows:\n\nUnderweight: BMI below 18.5 Normal weight: BMI between 18.5 - 24.9\n\nOverweight: BMI between 25-29.9\n\nObese: BMI 30 - 34.9\n\nSeverely Obese: BMI 35 or higher.",
   "article1_title2": "Underweight",
