--- a/assets/translations/vi.json
+++ b/assets/translations/vi.json
@@ -22,7 +22,7 @@
   "obesity_I": "Béo phì loại 1",
   "obesity_II": "Béo phì loại 2",
   "obesity_III": "Béo phì loại 3",
-  "ideal_range": "Chỉ số BMI lý tưởng khoảng",
+  "ideal_range": "Chỉ số BMI lý tưởng:",
   "save": "Lưu",
   "time_read": "3 phút đọc",
   "no_history": "Không có lịch sử",
@@ -40,6 +40,14 @@
   "confirm": "Đồng ý",
   "done": "Xong",
   "okay": "Xong",
+  "button_rate": "Đánh giá",
+  "no_thank": "Không, cảm ơn",
+  "maybe_later": "Để sau",
+  "close": "Đóng",
+  "select_language": "Chọn ngôn ngữ ",
+  "rate_content_2": "Nếu bạn thích ứng dụng này, vui lòng dành chút thời gian để xem xét nó!\nNó thực sự giúp ích cho chúng tôi và bạn sẽ không mất quá một phút.",
+  "rate": "Đánh giá ứng dụng này",
+  "rate_content": "Bạn có thích ứng dụng này không? Vui lòng để lại đánh giá",
   "article1_title1": "Phạm vi và ý nghĩa của BMI",
   "article1_content1": "BMI, hay Chỉ số khối cơ thể, là một phép đo được sử dụng rộng rãi để xác định xem một người có cân nặng khỏe mạnh so với chiều cao của họ hay không. BMI được tính bằng cách chia cân nặng của một người (tính bằng kg) cho bình phương chiều cao (tính bằng mét). Sau đó, con số kết quả được so sánh với một loạt các giá trị để xác định xem một người đang thiếu cân, cân nặng bình thường, thừa cân hay béo phì.\n\nTổ chức Y tế Thế giới (WHO) và các tổ chức y tế khác trên thế giới sử dụng phạm vi BMI làm hướng dẫn để đánh giá nguy cơ mắc các vấn đề sức khỏe liên quan đến trọng lượng cơ thể dư thừa. Các phạm vi BMI này như sau:\n\nThiếu cân: BMI dưới 18,5 Cân nặng bình thường: BMI từ 18,5 - 24,9\n\nThừa cân: BMI từ 25-29,9\n\nBéo phì: BMI 30 - 34,9\n\nBéo phì nặng: BMI 35 trở lên.",
   "article1_title2": "Thiếu cân",
